Fix overflowing footer width on mobile screens
by setting width to 100% and use box-sizing: border-box. This will
keep the padding on the right and not allow the container
dimensions to overflow the maximum available width.

--- a/theme/static/style/style.css
+++ b/theme/static/style/style.css
@@ -445,14 +445,16 @@ pre code {
         width: 0;
     }
     .footer .col-9 {
-        min-width: 95%;
+        width: 100%;
+        box-sizing: border-box;
         clear: both;
         font-size: 1.5rem;
         padding-left: 1.8rem;
         padding-right: 1.8rem;
     }
     .footer .col-2 {
-        min-width: 95%;
+        width: 100%;
+        box-sizing: border-box;
     }
     .footer-sociallinks {
         padding-left: 1.8rem;
